--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+#app credientials
+creds.py
+
+#env files
+Include/
+Lib/
+Scripts/
+pyvenv.cfg
